--- a/programacao_cotesia.html
+++ b/programacao_cotesia.html
@@ -605,22 +605,40 @@ function buildReportHtml(){
 
 function printReport(){
   const html = buildReportHtml();
-  const frame = document.createElement('iframe');
-  frame.style.position = 'fixed';
-  frame.style.right = '0';
-  frame.style.bottom = '0';
-  frame.style.width = '0';
-  frame.style.height = '0';
-  frame.style.border = '0';
-  document.body.appendChild(frame);
-  frame.contentDocument.open();
-  frame.contentDocument.write(html);
-  frame.contentDocument.close();
-  frame.onload = () => {
-    frame.contentWindow.focus();
-    frame.contentWindow.print();
-    setTimeout(()=> frame.remove(), 500);
-  };
+  const isMobile = /Mobi|Android|iPhone|iPad|iPod/i.test(navigator.userAgent) || window.innerWidth < 900;
+
+  if(isMobile){
+    const blob = new Blob([html], {type:'text/html'});
+    const url = URL.createObjectURL(blob);
+    const win = window.open(url, '_blank');
+    if(!win){
+      alert('Permita pop-ups para visualizar o relatório.');
+      URL.revokeObjectURL(url);
+      return;
+    }
+    win.onload = () => {
+      win.focus();
+      win.print();
+      setTimeout(()=> URL.revokeObjectURL(url), 2000);
+    };
+  } else {
+    const frame = document.createElement('iframe');
+    frame.style.position = 'fixed';
+    frame.style.right = '0';
+    frame.style.bottom = '0';
+    frame.style.width = '0';
+    frame.style.height = '0';
+    frame.style.border = '0';
+    document.body.appendChild(frame);
+    frame.contentDocument.open();
+    frame.contentDocument.write(html);
+    frame.contentDocument.close();
+    frame.onload = () => {
+      frame.contentWindow.focus();
+      frame.contentWindow.print();
+      setTimeout(()=> frame.remove(), 500);
+    };
+  }
 }
 
 /* ===== Init & eventos ===== */
