Update print statement from 'Hello' to 'Goodbye'

--- a/programacao_aplicacao.html
+++ b/programacao_aplicacao.html
@@ -179,8 +179,8 @@
   const APPS_SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbw0wYo2B8wXXv_SqVwVayNkDtG_UsroXNXfLk970sHff6cIXnayykA3DYqtrt0ldefP/exec';
 
   const FRentesPilotos = {
-    'Frente 1':'Matheus Pias','Frente 2':'Maicon Silva','Frente 3':'Alexandre Alves',
-    'Frente 4':'Felipe Santos','Frente 5':'Luiz Paulo','Frente 6':'Sem Piloto Cadastrado na Frente','Frente 7':'Heitor Ferreira'
+    'Frente 1':'Matheus Pias','Frente 2':'Jefferson','Frente 3':'Alexandre Alves',
+    'Frente 4':'Hallef','Frente 5':'Luiz Paulo','Frente 6':'Caio','Frente 7':'Heitor Ferreira'
   };
   const UnidadesPorEstado = {
     'MG':['Delta - Delta','Delta - Volta Grande','Florestadora - Santa Cecília (João Pinheiro - MG)','Parque de Bioenergia Lagoa da Prata (Lagoa da Prata - MG)'],
@@ -450,3 +450,4 @@
 </script>
 </body>
 </html>
+
